--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "skb.doc.tar.xz": b46199bfa02186213e317d03578f2ae3f63ad403
-  "skb.source.tar.xz": 23cce8a00f0141e3e7cb2bf2678b14d04bc2c311
-  "skb.tar.xz": 1128b63eabc05fe740c4ce623dbe6c849731843b
+  skb.doc.tar.xz: 7569bd45e0c05c6cba1be42849e408e8089c7fdf
+  skb.source.tar.xz: 00b176537e6d2809df0d4d7449b5c86e5ac69ea3
+  skb.tar.xz: fa67d1b18a0b8e7a3854316cfc65326264000f31
